--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,8 @@ dependencies:
   qr_code_scanner: ^1.0.0
   share_plus: ^12.0.1
   screenshot: ^3.0.0
-  permission_handler: ^12.0.1
+  # 12.x requires Dart >=3.5; stick to 11.x to support current SDK (3.4.0)
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
