--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,10 +22,15 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   qr_code_scanner: ^1.0.0
+  qr_flutter: ^4.1.0
   share_plus: ^12.0.1
   screenshot: ^3.0.0
   # 12.x requires Dart >=3.5; stick to 11.x to support current SDK (3.4.0)
   permission_handler: ^11.3.1
+  # 4.9.x requires Dart >=3.5;使用 4.8.x 以兼容当前 Dart 3.4.0
+  webview_flutter: ^4.8.0
+  device_info_plus: ^10.1.0
+  package_info_plus: ^8.0.0
 
 dev_dependencies:
   flutter_test:
