feat: 完成项目评审修复和代码重构
- 修复商品卡片价格行布局溢出问题
- 修复国际化配置问题（MaterialLocalizations）
- 重构代码：拆分超过300行的文件为独立widget组件
- 添加统一网络服务层（ApiService、ApiErrorHandler）
- 封装SDK调用：将Page层的SDK调用移至Service层
- 添加项目评审检查报告和修复进度报告（带日期后缀）
- 完善国际化支持（AppLocalizations）
- 优化代码结构和可维护性

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   webview_flutter: ^4.8.0
   device_info_plus: ^10.1.0
   package_info_plus: ^8.0.0
+  url_launcher: ^6.2.0
 
 dev_dependencies:
   flutter_test:
@@ -42,3 +43,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/mock/
